@@ -6,6 +6,7 @@
 
 * https://github.com/serpro69/kotlin-faker/pull/134[#134] Overload `RandomService#randomSublist` and `RandomService#randomSubset` with `sizeRange` parameter
 * https://github.com/serpro69/kotlin-faker/pull/144[#144] Add index and punctuation chars support to `RandomService#randomString`
+* https://github.com/serpro69/kotlin-faker/pull/154[#154] New Cryptography provider for generating random sha sums
 
 [discrete]
 === Changed
@@ -14,11 +15,13 @@
 
 [discrete]
 === Fixed
-* https://github.com/serpro69/kotlin-faker/issues/140[#140] Fix NPE when generating CurrencySymbol with non 'en' locale
-* https://github.com/serpro69/kotlin-faker/pull/142[#142] Fix unique localized category keys missing from dictionary
 * https://github.com/serpro69/kotlin-faker/issues/136[#136] Parameter 'streets' not found in 'ADDRESS' category
 * https://github.com/serpro69/kotlin-faker/issues/137[#137] Parameter 'category' not found in 'COMPANY' category for 'ja' locale
+* https://github.com/serpro69/kotlin-faker/issues/138[#138] Parameter 'zip_code' not found in 'ADDRESS' category for 'fr' locale
+* https://github.com/serpro69/kotlin-faker/issues/140[#140] Fix NPE when generating CurrencySymbol with non 'en' locale
+* https://github.com/serpro69/kotlin-faker/pull/142[#142] Fix unique localized category keys missing from dictionary
 * https://github.com/serpro69/kotlin-faker/pull/146[#146] Fix `RandomService#randomString` for some eng-lang locales
+* https://github.com/serpro69/kotlin-faker/issues/148[#148] Fix StarWars quotes by character
 
 [discrete]
 === Docs
